--- a/desc.html
+++ b/desc.html
@@ -82,7 +82,7 @@
                     <i class="fa-solid fa-file"></i> See my full CV <a
                     href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">here</a> <br>
                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a
-                    href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
+                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br> <br>
 
             </div>
         </div>
