--- a/desc_ro.html
+++ b/desc_ro.html
@@ -82,7 +82,7 @@
                     href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">aici</a> <br>
                 
                 <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
-                    href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
+                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br><br>
             </div>
         </div>
     </div>
