--- a/desc_de.html
+++ b/desc_de.html
@@ -83,7 +83,7 @@
                     href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
                 
                 <i class="fas fa-user-friends"></i> Kontaktieren Sie mich 😄 : <a
-                    href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
+                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br><br>
             </div>
         </div>
     </div>
