--- a/desc.html
+++ b/desc.html
@@ -38,7 +38,7 @@
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
                         Hi! I'm Andrei! Your <a
-                            href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
+                            href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                             target="_blank">Microsoft certified</a> web developer. A mental health and personal growth
                         advocate, part of <a href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
                     </p>
