--- a/desc_de.html
+++ b/desc_de.html
@@ -38,7 +38,7 @@
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
                         Hi! Ich bin Andrei Munteanu, ihr <a
-                            href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
+                            href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                             target="_blank">Microsoft zertifizierter</a> Webenwickler. Ein Trainer für psychische
                         Gesundheit am <a href="https://magnifywellness.org/" target="_blank">Magnify
                             Wellness</a>.
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-md col centerr">
                 <i class="fab fa-microsoft"></i> Microsoft zertifizierter Webentwickler: <a
-                    href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
+                    href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor und Webdesigner bei <a
                     href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>,
