--- a/desc_ro.html
+++ b/desc_ro.html
@@ -38,7 +38,7 @@
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
                         Salut. Sunt Andrei! Web developer-ul tău certificat de <a
-                            href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
+                            href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                             target="_blank">Microsoft</a>. Un activist al sănătății mentale, parte din <a
                             href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
                     </p>
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-md col centerr">
                 <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft: <a
-                    href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
+                    href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si Directorul
                 Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
