target blank facebook

--- a/desc.html
+++ b/desc.html
@@ -76,7 +76,7 @@
                 <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a
                     href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
                 <!-- If you're reading this then you're really cool, hit me up on instagram:) -->
-                <i class="fas fa-child"></i> Volunteer at <a
+                <i class="fas fa-child"></i> Volunteer at <a target="_blank"
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The
                     Children</a> Romania, Reșița <br>
                     <i class="fa-solid fa-file"></i> See my full CV <a
