--- a/desc_de.html
+++ b/desc_de.html
@@ -77,7 +77,7 @@
                     href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a>, <a
                     href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a> <br>
                 <i class="fas fa-child"></i> Ehrenamtlich bei <a
-                    href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
+                    href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738" target="_blank"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
                     <i class="fa-solid fa-file"></i> Sehen Sie <a
                     href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
