--- a/desc_ro.html
+++ b/desc_ro.html
@@ -75,7 +75,7 @@
                     target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/"
                     target="_blank">Fake News Identifier</a>, <a href="https://romana-vs-info.ro/"
                     target="_blank">romana-vs-info.ro</a> <br>
-                <i class="fas fa-child"></i> Voluntar la <a
+                <i class="fas fa-child"></i> Voluntar la <a target="_blank" 
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
                     <i class="fa-solid fa-file"></i> Vede-ți-mi CV-ul <a
