--- a/desc.html
+++ b/desc.html
@@ -71,16 +71,16 @@
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of
                 Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO
                 dedicated to Mental Health <br>
-                <i class="fas fa-globe-europe"></i> Check out some of my projects: <a
-                    href="https://pcarioca.github.io/Mentally-Healthy/index.html" target="_blank">Mentally Healthy</a>,
-                <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a
-                    href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
-                <!-- If you're reading this then you're really cool, hit me up on instagram:) -->
+                <i class="fas fa-globe-europe"></i> Check out some of my projects: 
+                <a href="https://digitalguardians.netlify.app/">Digital Guardians</a>,
+                <a href="https://identifyfakenews.netlify.app/" target="_blank">Fake News Identifier</a> <br>
+                <!-- If you're reading this then you're really cool, hit me up on instagram:) @andrewww_mnt-->
                 <i class="fas fa-child"></i> Volunteer at <a target="_blank"
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The
                     Children</a> Romania, Reșița <br>
-                    <i class="fa-solid fa-file"></i> See my full CV <a
-                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">here</a> <br>
+                <i class="fa-solid fa-file"></i> See my full CV <a
+                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing"
+                    target="_blank">here</a> <br>
                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a
                     href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br> <br>
 
