--- a/desc_de.html
+++ b/desc_de.html
@@ -71,11 +71,11 @@
                     target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor und Webdesigner bei <a
                     href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>,
+                    <!-- Wenn du das liest, bist du geil. Schick mir ein Nachricht auf Instagram! @andrewww_mnt-->
                 eine gemeinnützige Organisation, die sich psychischen Gesundheit gewidmet. <br>
                 <i class="fas fa-globe-europe"></i> Sehen Sie ein paar meiner Projekte: <a
-                    href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a
-                    href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a>, <a
-                    href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a> <br>
+                    href="https://identifyfakenews.netlify.app" target="_blank">Fake News Identifier</a>, 
+                    <a href="https://digitalguardians.netlify.app/">Digital Guardians</a> <br>
                 <i class="fas fa-child"></i> Ehrenamtlich bei <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738" target="_blank"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
