--- a/desc_ro.html
+++ b/desc_ro.html
@@ -71,16 +71,18 @@
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si Directorul
                 Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
                 dedicat sănătății mentale <br>
-                <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/"
-                    target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/"
-                    target="_blank">Fake News Identifier</a>, <a href="https://romana-vs-info.ro/"
-                    target="_blank">romana-vs-info.ro</a> <br>
-                <i class="fas fa-child"></i> Voluntar la <a target="_blank" 
+                <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: 
+                <a href="https://digitalguardians.netlify.app/">Digital Guardians</a>
+                <!--Daca citest asta, esti cool. Scrie-mi pe insta: @andrewww_mnt-->
+                 <a href="https://identifyfakenews.netlify.app"
+                    target="_blank">Fake News Identifier</a> <br>
+                <i class="fas fa-child"></i> Voluntar la <a target="_blank"
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
-                    <i class="fa-solid fa-file"></i> Vede-ți-mi CV-ul <a
-                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">aici</a> <br>
-                
+                <i class="fa-solid fa-file"></i> Vede-ți-mi CV-ul <a
+                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing"
+                    target="_blank">aici</a> <br>
+
                 <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
                     href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br><br>
             </div>
