--- a/desc.html
+++ b/desc.html
@@ -49,7 +49,7 @@
             <div class="col-md-3 col padd">
                 <a href="https://github.com/Pcarioca" target="_blank" id="github"><i
                         class="fab fa-github one-third big-icon"></i></a>
-                <a href="mailto:amunteanu@magnifywellness.org" id="mail"><i
+                <a href="mailto:incognitopaul97@gmail.com" id="mail"><i
                         class="fas fa-at one-third big-icon"></i></a>
                 <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
