--- a/Ihr_Webentwickler.html
+++ b/Ihr_Webentwickler.html
@@ -25,6 +25,9 @@
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
     <title>Ihr Webentwickler</title>
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noindex">
+    <meta http-equiv="refresh" content="landing_page;url=index.html">
 </head>
 
 <body>
