--- a/desc_de.html
+++ b/desc_de.html
@@ -16,7 +16,8 @@
 
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="desc.css">
-
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noindex">
     <script src="https://kit.fontawesome.com/e85267642f.js" crossorigin="anonymous"></script>
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
@@ -80,7 +81,7 @@
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738" target="_blank"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
                     <i class="fa-solid fa-file"></i> Sehen Sie <a
-                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
+                    href="https://drive.google.com/file/d/1a8p4x1MSwxwTyTKTQ9wj3vskhvu45kpe/view?usp=sharing" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
                 
                 <i class="fas fa-user-friends"></i> Kontaktieren Sie mich 😄 : <a
                     href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br><br>
