--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -22,7 +22,9 @@
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
-
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noindex">
+    <meta http-equiv="refresh" content="landing_page;url=index.html">
     <title>Web developer-ul tau</title>
 
 
