--- a/desc.html
+++ b/desc.html
@@ -17,7 +17,8 @@
     <script src="jquery/index.js"></script>
     <script src="https://kit.fontawesome.com/e85267642f.js" crossorigin="anonymous"></script>
 
-
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noindex">
 
     <title>Document</title>
 </head>
@@ -79,7 +80,7 @@
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The
                     Children</a> Romania, Reșița <br>
                 <i class="fa-solid fa-file"></i> See my full CV <a
-                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1a8p4x1MSwxwTyTKTQ9wj3vskhvu45kpe/view?usp=sharing"
                     target="_blank">here</a> <br>
                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a
                     href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br> <br>
