--- a/desc_ro.html
+++ b/desc_ro.html
@@ -16,7 +16,8 @@
 
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="desc.css">
-
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noindex">
     <script src="https://kit.fontawesome.com/e85267642f.js" crossorigin="anonymous"></script>
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
@@ -80,7 +81,7 @@
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
                 <i class="fa-solid fa-file"></i> Vede-ți-mi CV-ul <a
-                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1a8p4x1MSwxwTyTKTQ9wj3vskhvu45kpe/view?usp=sharing"
                     target="_blank">aici</a> <br>
 
                 <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
