--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <meta name="author" content="Paul Andrei Munteanu">
     <meta name="description" content="Andrei Munteanu - Prezentare, Andrei Munteanu - Presentation">
     <meta name="keywords"
-        content="Andrei, Andrew, Andrei Munteanu, pcarioca.github.io, designer services, services, Andrew Munteanu, Munteanu Paul Andrei, Paul Andrei Munteanu, web site business, web site creator, paid web developer, paid, program, Paul Munteanu, Paul Andrei, Paul, web development, microsoft certified web developer, certified web developer, web development, web development leader, web designer, designer, certified web designer, certified designer, psychology, Andrew Magnify, web developer, developer, website, development, microsoft, certified, mentor, magnify wellness, mental health, self development, growth, Your web developer, your certified web developer, your certified web designer, love">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="AIiE1In7ROZjqDJUxn0owdGpx9oQ1xNPnYqI-pOjpP4" />
+        content="Andrei, Andrew, Andrei Munteanu, pcarioca.github.io, designer services, services, Andrew Munteanu, Munteanu Paul Andrei, Paul Andrei Munteanu, web site business, web site creator, paid web developer, paid, program, Paul Munteanu, Paul Andrei, Paul, web development, microsoft certified web developer, certified web developer, web development, web development leader, web designer, designer, certified web designer, certified designer, psychology, Andrew Magnify, web developer, developer, website, development, microsoft, certified, mentor, magnify wellness, mental health, self development, growth, Your web developer, your certified web developer, your certified web designer, love, web, development, web services, web development services">
+    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="This is the personal website for Andrei Munteanu, your web developer. You can contact me of see some of my info, including my resume. Have fun!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
