--- a/your_developer.html
+++ b/your_developer.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="switch.css">
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noindex">
+    <meta http-equiv="refresh" content="landing_page;url=index.html">
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
