forgot about target blank

--- a/desc.html
+++ b/desc.html
@@ -73,7 +73,7 @@
                 Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO
                 dedicated to Mental Health <br>
                 <i class="fas fa-globe-europe"></i> Check out some of my projects: 
-                <a href="https://digitalguardians.netlify.app/">Digital Guardians</a>,
+                <a href="https://digitalguardians.netlify.app/" target="_blank">Digital Guardians</a>,
                 <a href="https://identifyfakenews.netlify.app/" target="_blank">Fake News Identifier</a> <br>
                 <!-- If you're reading this then you're really cool, hit me up on instagram:) @andrewww_mnt-->
                 <i class="fas fa-child"></i> Volunteer at <a target="_blank"
