--- a/desc_ro.html
+++ b/desc_ro.html
@@ -73,7 +73,7 @@
                 Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
                 dedicat sănătății mentale <br>
                 <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: 
-                <a href="https://digitalguardians.netlify.app/">Digital Guardians</a>
+                <a href="https://digitalguardians.netlify.app/" target="_blank">Digital Guardians</a>
                 <!--Daca citesti asta, esti cool. Scrie-mi pe insta: @andrewww_mnt-->
                  <a href="https://identifyfakenews.netlify.app"
                     target="_blank">Fake News Identifier</a> <br>
