--- a/desc_de.html
+++ b/desc_de.html
@@ -76,7 +76,7 @@
                 eine gemeinnützige Organisation, die sich psychischen Gesundheit gewidmet. <br>
                 <i class="fas fa-globe-europe"></i> Sehen Sie ein paar meiner Projekte: <a
                     href="https://identifyfakenews.netlify.app" target="_blank">Fake News Identifier</a>, 
-                    <a href="https://digitalguardians.netlify.app/">Digital Guardians</a> <br>
+                    <a href="https://digitalguardians.netlify.app/" target="_blank">Digital Guardians</a> <br>
                 <i class="fas fa-child"></i> Ehrenamtlich bei <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738" target="_blank"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
