--- a/desc.html
+++ b/desc.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-md col centerr">
                 <i class="fab fa-microsoft"></i> <a
-                    href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
+                    href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">Microsoft certified</a> web developer<br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of
                 Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO
