--- a/desc.html
+++ b/desc.html
@@ -38,10 +38,12 @@
                 <div id="center">
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
-                        Hi! I'm Andrei! Your <a
+                        <!-- Hi! I'm Andrei! Your <a
                             href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                             target="_blank">Microsoft certified</a> web developer. A mental health and personal growth
                         advocate, part of <a href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
+                     -->
+                        I’m a Microsoft Certified, multilingual Computer Engineering student with a perfect 10/10 in Java OOP, hands‑on experience in C & Python, and a strong passion for electronics.
                     </p>
                 </div>
             </div>
@@ -66,16 +68,25 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
+                <i class="fa-solid fa-microchip"></i>   Computer Engineering student @ <a href="https://ac.upt.ro/">ac.upt.ro</a> <br>
+                      <i class="fa-brands fa-java"> </i>   Java OOP enjoyer — built a fully functional Markov Chain generator from scratch.
+                    <br>
+                    <i class="fa-solid fa-lightbulb"> </i>   Turning schematics into working circuits — one jumper wire at a time <br>
+                    <i class="fa-solid fa-code"></i>   Coding in C for power and precision, Python for flexibility and rapid problem‑solving <br>
+                    <i class="fa-solid fa-globe"></i> Bridge-builder across English, German & Romanian dev squads—translating specs, memes, and coffee orders <br>
+                    <i class="fa-solid fa-hand-holding-medical"></i> Unofficial team therapist / teacher / volunteer: I study psychology as a hobby, good at explaining stuff, and will do extra if it's for a good cause.
+                <!-- 
                 <i class="fab fa-microsoft"></i> <a
                     href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">Microsoft certified</a> web developer<br>
+                  
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of
                 Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO
                 dedicated to Mental Health <br>
                 <i class="fas fa-globe-europe"></i> Check out some of my projects: 
                 <a href="https://digitalguardians.netlify.app/" target="_blank">Digital Guardians</a>,
                 <a href="https://identifyfakenews.netlify.app/" target="_blank">Fake News Identifier</a> <br>
-                <!-- If you're reading this then you're really cool, hit me up on instagram:) @andrewww_mnt-->
+                 
                 <i class="fas fa-child"></i> Volunteer at <a target="_blank"
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The
                     Children</a> Romania, Reșița <br>
@@ -83,7 +94,10 @@
                     href="https://drive.google.com/file/d/1a8p4x1MSwxwTyTKTQ9wj3vskhvu45kpe/view?usp=sharing"
                     target="_blank">here</a> <br>
                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a
-                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br> <br>
+                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br> <br> 
+                If you're reading this, this is what I used to have back in high school on this website:))
+                pretty impressive for a kid, right?
+                    -->
 
             </div>
         </div>
