couple new updates

--- a/desc_de.html
+++ b/desc_de.html
@@ -26,7 +26,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body id="body">
 
     <div class="container-fluid">
         <div class="row">
@@ -38,15 +38,14 @@
                 <div id="center">
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
-                        Hi! Ich bin Andrei Munteanu, ihr <a
-                            href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                            target="_blank">Microsoft zertifizierter</a> Webenwickler. Ein Trainer für psychische
-                        Gesundheit am <a href="https://magnifywellness.org/" target="_blank">Magnify
-                            Wellness</a>.
+                        
+                        Ich bin ein Computertechnik-Student mit Microsoft-Zertifizierung und Sprachkenntnissen,  
+                        mit voller Punktzahl in objektorientierter Java-Programmierung, praktischer Erfahrung in C & Python  
+                        und einer starken Leidenschaft für Elektronik.
                     </p>
                 </div>
             </div>
-            <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
+
             <div class="col-3 hide2"></div>
             <div class="col-md-3 col padd">
                 <a href="https://github.com/Pcarioca" target="_blank" id="github"><i
@@ -55,7 +54,7 @@
                         class="fas fa-at one-third big-icon"></i></a>
                 <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
-                <!-- <span id="hide2"><br></span> -->
+
                 <a href="https://www.facebook.com/andrei.munteanu.04" target="_blank" id="facebook"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
                 <a href="https://www.instagram.com/andrewww_mnt/" target="_blank" id="instagram"><i
@@ -67,28 +66,37 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Microsoft zertifizierter Webentwickler: <a
-                    href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                    target="_blank">verify.certiport.com</a> <br>
-                <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor und Webdesigner bei <a
-                    href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>,
-                    <!-- Wenn du das liest, bist du geil. Schick mir ein Nachricht auf Instagram! @andrewww_mnt-->
-                eine gemeinnützige Organisation, die sich psychischen Gesundheit gewidmet. <br>
-                <i class="fas fa-globe-europe"></i> Sehen Sie ein paar meiner Projekte: <a
-                    href="https://identifyfakenews.netlify.app" target="_blank">Fake News Identifier</a>, 
-                    <a href="https://digitalguardians.netlify.app/" target="_blank">Digital Guardians</a> <br>
-                <i class="fas fa-child"></i> Ehrenamtlich bei <a
-                    href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738" target="_blank"> Salvați
-                    Copiii</a>, Filiala Caraș-Severin <br>
-                    <i class="fa-solid fa-file"></i> Sehen Sie <a
-                    href="https://drive.google.com/file/d/1a8p4x1MSwxwTyTKTQ9wj3vskhvu45kpe/view?usp=sharing" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
-                
-                <i class="fas fa-user-friends"></i> Kontaktieren Sie mich 😄 : <a
-                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br><br>
+                <i class="fa-solid fa-microchip"></i> Ich studiere Computertechnik 
+                @ <a target="_blank" href="https://ac.upt.ro/">ac.upt.ro</a> <br>
+                <i class="fa-brands fa-java"> </i> Java-OOP-Enthusiast & Webdesign-Kenner: 
+                Ich werde eine <a target="_blank" href="https://github.com/Pcarioca/Markov-Language-Model">Markov-Kette</a> 
+                in Java implementieren und deine 
+                <a target="_blank" href="https://drive.google.com/file/d/1tW6yGmAM7_J6w77Na22AqdBXw0AqYO0y/view?usp=sharing">Landingpage</a> 
+                für deine <a target="_blank" href="https://urbanflux.ro/">Kunden</a> gestalten.
+                <br>
+                <i class="fa-solid fa-lightbulb"> </i> Ich verwandle Schaltpläne in
+                 <a target="_blank" href="https://drive.google.com/drive/folders/1oCFdvBI4MhLKdF0IEkJW023PLBN02rTJ?usp=sharing">funktionierende Schaltungen</a> 
+                 – Draht für Draht <br>
+                <i class="fa-solid fa-code"></i> Ich programmiere in C für 
+                <a target="_blank" href="https://github.com/Pcarioca/Operating-Systems">Leistung und Präzision</a>, 
+                in Python für Flexibilität und schnelle Problemlösungen <br>
+                <i class="fa-solid fa-globe"></i> Brückenbauer zwischen Entwicklerteams in 
+                <a target="_blank" href="https://drive.google.com/file/d/1r-7l63DyvJ4YRccVLBGauEA58jHacoPh/view?usp=sharing">Englisch</a>, 
+                <a target="_blank" href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">Deutsch</a> und Rumänisch: 
+                <a target="_blank" href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">ich übersetze</a> 
+                Spezifikationen, Memes und Kaffeebestellungen <br>
+                <i class="fa-solid fa-hand-holding-medical"></i> Inoffizieller 
+                <a target="_blank" href="https://magnifywellness.org/Tech_team.html">Therapeut</a> / 
+                <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">Lehrer</a> / 
+                <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">Freiwilliger</a> 
+                des Teams: Ich studiere Psychologie als Hobby, erkläre Dinge gut und tue 
+                <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">mehr</a>, 
+                wenn es für einen <a target="_blank" href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">guten Zweck</a> ist.
             </div>
         </div>
     </div>
 
 </body>
+
 
 </html>
