--- a/desc_ro.html
+++ b/desc_ro.html
@@ -26,7 +26,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body id="body">
 
     <div class="container-fluid">
         <div class="row">
@@ -38,14 +38,14 @@
                 <div id="center">
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
-                        Salut. Sunt Andrei! Web developer-ul tău certificat de <a
-                            href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                            target="_blank">Microsoft</a>. Un activist al sănătății mentale, parte din <a
-                            href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
+                        
+                        Sunt un student la Inginerie Calculatoare, certificat Microsoft și vorbitor de limbi străine,
+                        cu punctaj maxim la Programare Orientată pe Obiecte în Java, experiență practică în C & Python
+                        și o pasiune puternică pentru electronică.
                     </p>
                 </div>
             </div>
-            <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
+
             <div class="col-3 hide2"></div>
             <div class="col-md-3 col padd">
                 <a href="https://github.com/Pcarioca" target="_blank" id="github"><i
@@ -54,7 +54,7 @@
                         class="fas fa-at one-third big-icon"></i></a>
                 <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
-                <!-- <span id="hide2"><br></span> -->
+
                 <a href="https://www.facebook.com/andrei.munteanu.04" target="_blank" id="facebook"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
                 <a href="https://www.instagram.com/andrewww_mnt/" target="_blank" id="instagram"><i
@@ -66,26 +66,13 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft: <a
-                    href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                    target="_blank">verify.certiport.com</a> <br>
-                <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si Directorul
-                Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
-                dedicat sănătății mentale <br>
-                <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: 
-                <a href="https://digitalguardians.netlify.app/" target="_blank">Digital Guardians</a>
-                <!--Daca citesti asta, esti cool. Scrie-mi pe insta: @andrewww_mnt-->
-                 <a href="https://identifyfakenews.netlify.app"
-                    target="_blank">Fake News Identifier</a> <br>
-                <i class="fas fa-child"></i> Voluntar la <a target="_blank"
-                    href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
-                    Copiii</a>, Filiala Caraș-Severin <br>
-                <i class="fa-solid fa-file"></i> Vede-ți-mi CV-ul <a
-                    href="https://drive.google.com/file/d/1a8p4x1MSwxwTyTKTQ9wj3vskhvu45kpe/view?usp=sharing"
-                    target="_blank">aici</a> <br>
-
-                <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
-                    href="mailto:incognitopaul97@gmail.com">incognitopaul97@gmail.com</a> <br><br>
+                <i class="fa-solid fa-microchip"></i> Studiez Ingineria Calculatoarelor @ <a target="_blank" href="https://ac.upt.ro/">ac.upt.ro</a> <br>
+                <i class="fa-brands fa-java"> </i> Pasionat de Java OOP & cunoscător de web design: voi implementa un <a target="_blank" href="https://github.com/Pcarioca/Markov-Language-Model">Lanț Markov</a> în Java și îți voi <a target="_blank" href="https://drive.google.com/file/d/1tW6yGmAM7_J6w77Na22AqdBXw0AqYO0y/view?usp=sharing">proiecta</a> landing page-ul pentru <a target="_blank" href="https://urbanflux.ro/">clienții</a> tăi.
+                <br>
+                <i class="fa-solid fa-lightbulb"> </i> Transform scheme în <a target="_blank" href="https://drive.google.com/drive/folders/1oCFdvBI4MhLKdF0IEkJW023PLBN02rTJ?usp=sharing">circuite funcționale</a> — fir cu fir <br>
+                <i class="fa-solid fa-code"></i> Programez în C pentru <a target="_blank" href="https://github.com/Pcarioca/Operating-Systems">putere și precizie</a>, Python pentru flexibilitate și rezolvare rapidă de probleme <br>
+                <i class="fa-solid fa-globe"></i> Conectez între echipe de dezvoltatori în <a target="_blank" href="https://drive.google.com/file/d/1r-7l63DyvJ4YRccVLBGauEA58jHacoPh/view?usp=sharing">engleză</a>, <a target="_blank" href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">germană</a> și română: <a target="_blank" href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">traduc</a> specificații, meme-uri și comenzi de cafea <br>
+                <i class="fa-solid fa-hand-holding-medical"></i> <a target="_blank" href="https://magnifywellness.org/Tech_team.html">psiholog</a>  / <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">profesor</a> / <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">voluntar</a> neoficial al echipei: studiez psihologia ca hobby, explic bine lucrurile și fac <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> dacă e pentru o <a href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">cauză bună</a>.
             </div>
         </div>
     </div>
