--- a/index.html
+++ b/index.html
@@ -64,11 +64,21 @@
             </div>
         </div>
     </div>
+
+    <iframe id="preloader" src="/your_developer.html" loading="eager"></iframe>
+
+    
 <script>
         setTimeout(function(){
             window.location.href = "/your_developer.html";
         }, 2000)
     </script>
+
+
+</script>
+
+
+    
 
 
 
