new icon and landing

--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -25,7 +25,7 @@
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
     <meta http-equiv="refresh" content="landing_page;url=index.html">
-    <title>Web developer-ul tau</title>
+    <title>Următorul tău angajat</title>
 
 
 </head>
