--- a/Ihr_Webentwickler.html
+++ b/Ihr_Webentwickler.html
@@ -24,7 +24,7 @@
     <link rel="icon" href="assets/icon/heart.png">
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
-    <title>Ihr Webentwickler</title>
+    <title>Dein nächster Mitarbeiter</title>
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
     <meta http-equiv="refresh" content="landing_page;url=index.html">
