--- a/your_developer.html
+++ b/your_developer.html
@@ -27,7 +27,7 @@
     <link rel="icon" href="assets/icon/heart.png">
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
-    <title>Your Web Developer</title>
+    <title>Your next hire</title>
 </head>
 
 <body>
