--- a/desc.html
+++ b/desc.html
@@ -45,7 +45,8 @@
                      -->
                         I’m a Microsoft Certified, multilingual Computer Engineering student 
                         with a perfect score in Java OOP, hands‑on experience in C & Python, 
-                        and a strong passion for electronics.
+                        and a strong passion for electronics. 
+                        <a target="_blank" href="https://drive.google.com/file/d/1XwXEsweOe5ytZLQk_VVg2qxF_9rQErc0/view?usp=sharing">Read my full resume</a>.
                     </p>
                 </div>
             </div>
@@ -56,7 +57,7 @@
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:incognitopaul97@gmail.com" id="mail"><i
                         class="fas fa-at one-third big-icon"></i></a>
-                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
+                <a href="https://www.linkedin.com/in/andrei-munteanu-8707862aa/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
                 <!-- <span id="hide2"><br></span> -->
                 <a href="https://www.facebook.com/andrei.munteanu.04" target="_blank" id="facebook"><i
@@ -70,13 +71,32 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fa-solid fa-microchip"></i>   Computer Engineering student @ <a href="https://ac.upt.ro/">ac.upt.ro</a> <br>
-                      <i class="fa-brands fa-java"> </i>   Java OOP enjoyer & web design conniseur: will implement a <a href="https://github.com/Pcarioca/Markov-Language-Model">Markov Chain</a> in Java and <a href="https://drive.google.com/file/d/1tW6yGmAM7_J6w77Na22AqdBXw0AqYO0y/view?usp=sharing">design</a> your landing page for your <a href="https://urbanflux.ro/">clients</a>.
+                <i class="fa-solid fa-microchip"></i>   Computer Engineering student @ 
+                <a target="_blank" href="https://ac.upt.ro/">ac.upt.ro</a> <br>
+                      <i class="fa-brands fa-java"> </i>   
+                      Java OOP enjoyer & web design conniseur: 
+                      will implement a 
+                      <a target="_blank" href="https://github.com/Pcarioca/Markov-Language-Model">Markov Chain</a> 
+                      in Java and <a target="_blank" href="https://drive.google.com/file/d/1tW6yGmAM7_J6w77Na22AqdBXw0AqYO0y/view?usp=sharing">design</a>
+                       your landing page for your <a target="_blank" href="https://urbanflux.ro/">clients</a>.
                     <br>
-                    <i class="fa-solid fa-lightbulb"> </i>   Turning schematics into <a href="https://drive.google.com/drive/folders/1oCFdvBI4MhLKdF0IEkJW023PLBN02rTJ?usp=sharing">working circuits</a> — one jumper wire at a time <br>
-                    <i class="fa-solid fa-code"></i>   Coding in C for <a href="https://github.com/Pcarioca/Operating-Systems">power and precision</a>, Python for flexibility and rapid problem‑solving <br>
-                    <i class="fa-solid fa-globe"></i> Bridge-builder across <a href="https://drive.google.com/file/d/1r-7l63DyvJ4YRccVLBGauEA58jHacoPh/view?usp=sharing">English</a> , <a href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">German</a>  & Romanian dev squads: <a href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">translating</a> specs, memes, and coffee orders <br>
-                    <i class="fa-solid fa-hand-holding-medical"></i> Unofficial team <a href="https://magnifywellness.org/Tech_team.html">therapist</a> / <a href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">teacher</a> / <a href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">volunteer</a>: I study psychology as a hobby, good at explaining stuff, and will do <a href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> if it's for a <a href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">good cause</a>.
+                    <i class="fa-solid fa-lightbulb"> </i>   
+                    Turning schematics into 
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1oCFdvBI4MhLKdF0IEkJW023PLBN02rTJ?usp=sharing">working circuits</a> —
+                     one jumper wire at a time <br>
+                    <i class="fa-solid fa-code"></i>   
+                    Coding in C for <a target="_blank" href="https://github.com/Pcarioca/Operating-Systems">
+                        power and precision</a>, Python for flexibility and rapid problem‑solving <br>
+                    <i class="fa-solid fa-globe"></i> 
+                    Bridge-builder across 
+                    <a target="_blank" href="https://drive.google.com/file/d/1r-7l63DyvJ4YRccVLBGauEA58jHacoPh/view?usp=sharing">English</a> , 
+                    <a target="_blank" href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">German</a>  & Romanian dev squads: <a href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">translating</a> specs, memes, and coffee orders <br>
+                    <i class="fa-solid fa-hand-holding-medical"></i> 
+                    Unofficial team <a target="_blank" href="https://magnifywellness.org/Tech_team.html">therapist</a> /
+                     <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">teacher</a> / 
+                     <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">volunteer</a>: I study psychology as a hobby, 
+                     good at explaining stuff, and will do <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> 
+                     if it's for a <a target="_blank" href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">good cause</a>.
                 <!-- 
                 <i class="fab fa-microsoft"></i> <a
                     href="https://www.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
@@ -101,7 +121,7 @@
    *         If you're reading this, this is what I used to have back in high school on this website:))
    *             pretty impressive for a kid, right?
    *             
-   ********************************************************************************************************************************************************
+   ******************************************************************************************************************************************************
                     -->
 
             </div>
