--- a/desc_de.html
+++ b/desc_de.html
@@ -41,7 +41,10 @@
                         
                         Ich bin ein Computertechnik-Student mit Microsoft-Zertifizierung und Sprachkenntnissen,  
                         mit voller Punktzahl in objektorientierter Java-Programmierung, praktischer Erfahrung in C & Python  
-                        und einer starken Leidenschaft für Elektronik.
+                        und einer starken Leidenschaft für Elektronik. Lies meinen
+
+                        <a target="_blank" href="https://drive.google.com/file/d/1XwXEsweOe5ytZLQk_VVg2qxF_9rQErc0/view?usp=sharing">gesamten Lebenslauf</a>.
+
                     </p>
                 </div>
             </div>
@@ -52,7 +55,7 @@
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:incognitopaul97@gmail.com" id="mail"><i
                         class="fas fa-at one-third big-icon"></i></a>
-                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
+                <a href="https://www.linkedin.com/in/andrei-munteanu-8707862aa/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
 
                 <a href="https://www.facebook.com/andrei.munteanu.04" target="_blank" id="facebook"><i
