--- a/desc_ro.html
+++ b/desc_ro.html
@@ -41,7 +41,9 @@
                         
                         Sunt un student la Inginerie Calculatoare, certificat Microsoft și vorbitor de limbi străine,
                         cu punctaj maxim la Programare Orientată pe Obiecte în Java, experiență practică în C & Python
-                        și o pasiune puternică pentru electronică.
+                        și o pasiune puternică pentru electronică. Citește
+                        <a target="_blank" href="https://drive.google.com/file/d/1XwXEsweOe5ytZLQk_VVg2qxF_9rQErc0/view?usp=sharing">Întregul meu CV</a>.
+
                     </p>
                 </div>
             </div>
@@ -52,7 +54,7 @@
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:incognitopaul97@gmail.com" id="mail"><i
                         class="fas fa-at one-third big-icon"></i></a>
-                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
+                <a href="https://www.linkedin.com/in/andrei-munteanu-8707862aa/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
 
                 <a href="https://www.facebook.com/andrei.munteanu.04" target="_blank" id="facebook"><i
@@ -66,13 +68,28 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fa-solid fa-microchip"></i> Studiez Ingineria Calculatoarelor @ <a target="_blank" href="https://ac.upt.ro/">ac.upt.ro</a> <br>
-                <i class="fa-brands fa-java"> </i> Pasionat de Java OOP & cunoscător de web design: voi implementa un <a target="_blank" href="https://github.com/Pcarioca/Markov-Language-Model">Lanț Markov</a> în Java și îți voi <a target="_blank" href="https://drive.google.com/file/d/1tW6yGmAM7_J6w77Na22AqdBXw0AqYO0y/view?usp=sharing">proiecta</a> landing page-ul pentru <a target="_blank" href="https://urbanflux.ro/">clienții</a> tăi.
+                <i class="fa-solid fa-microchip"></i>
+                 Studiez Ingineria Calculatoarelor @ 
+                 <a target="_blank" href="https://ac.upt.ro/">ac.upt.ro</a> <br>
+                <i class="fa-brands fa-java"> </i> 
+                Pasionat de Java OOP & cunoscător de web design: voi implementa un 
+                <a target="_blank" href="https://github.com/Pcarioca/Markov-Language-Model">Lanț Markov</a> în Java și îți voi 
+                <a target="_blank" href="https://drive.google.com/file/d/1tW6yGmAM7_J6w77Na22AqdBXw0AqYO0y/view?usp=sharing">proiecta</a> landing page-ul pentru 
+                <a target="_blank" href="https://urbanflux.ro/">clienții</a> tăi.
                 <br>
-                <i class="fa-solid fa-lightbulb"> </i> Transform scheme în <a target="_blank" href="https://drive.google.com/drive/folders/1oCFdvBI4MhLKdF0IEkJW023PLBN02rTJ?usp=sharing">circuite funcționale</a> — fir cu fir <br>
-                <i class="fa-solid fa-code"></i> Programez în C pentru <a target="_blank" href="https://github.com/Pcarioca/Operating-Systems">putere și precizie</a>, Python pentru flexibilitate și rezolvare rapidă de probleme <br>
-                <i class="fa-solid fa-globe"></i> Conectez între echipe de dezvoltatori în <a target="_blank" href="https://drive.google.com/file/d/1r-7l63DyvJ4YRccVLBGauEA58jHacoPh/view?usp=sharing">engleză</a>, <a target="_blank" href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">germană</a> și română: <a target="_blank" href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">traduc</a> specificații, meme-uri și comenzi de cafea <br>
-                <i class="fa-solid fa-hand-holding-medical"></i> <a target="_blank" href="https://magnifywellness.org/Tech_team.html">psiholog</a>  / <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">profesor</a> / <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">voluntar</a> neoficial al echipei: studiez psihologia ca hobby, explic bine lucrurile și fac <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> dacă e pentru o <a href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">cauză bună</a>.
+                <i class="fa-solid fa-lightbulb"> </i> Transform scheme în 
+                <a target="_blank" href="https://drive.google.com/drive/folders/1oCFdvBI4MhLKdF0IEkJW023PLBN02rTJ?usp=sharing">circuite funcționale</a> — fir cu fir <br>
+                <i class="fa-solid fa-code"></i> Programez în C pentru 
+                <a target="_blank" href="https://github.com/Pcarioca/Operating-Systems">putere și precizie</a>, Python pentru flexibilitate și rezolvare rapidă de probleme <br>
+                <i class="fa-solid fa-globe"></i> Conectez între echipe de dezvoltatori în 
+                <a target="_blank" href="https://drive.google.com/file/d/1r-7l63DyvJ4YRccVLBGauEA58jHacoPh/view?usp=sharing">engleză</a>, 
+                <a target="_blank" href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">germană</a> și română: 
+                <a target="_blank" href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">traduc</a> specificații, meme-uri și comenzi de cafea <br>
+                <i class="fa-solid fa-hand-holding-medical"></i> <a target="_blank" href="https://magnifywellness.org/Tech_team.html">psiholog</a>  /
+                 <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">profesor</a> / 
+                 <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">voluntar</a> neoficial al echipei: studiez psihologia ca hobby, explic bine lucrurile și fac 
+                 <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> dacă e pentru o 
+                 <a target="_blank" href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">cauză bună</a>.
             </div>
         </div>
     </div>
