--- a/Ihr_Webentwickler.html
+++ b/Ihr_Webentwickler.html
@@ -24,6 +24,7 @@
     <link rel="icon" href="assets/icon/heart.png">
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
+        <script src="jquery/egg.js"></script>
     <title>Dein nächster Mitarbeiter</title>
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
