--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -19,12 +19,12 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="switch.css">
-    <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
     <meta http-equiv="refresh" content="landing_page;url=index.html">
+    <script src="jquery/egg.js"></script>
     <title>Următorul tău angajat</title>
 
 
