--- a/your_developer.html
+++ b/your_developer.html
@@ -27,6 +27,8 @@
     <link rel="icon" href="assets/icon/heart.png">
     <script src="jquery/jquery-3.6.0.js"></script>
     <script src="jquery/index.js"></script>
+    <script src="jquery/egg.js"></script>
+
     <title>Your next hire</title>
 </head>
 
