--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -25,6 +25,7 @@
     <meta name="robots" content="noindex">
     <meta http-equiv="refresh" content="landing_page;url=index.html">
     <script src="jquery/egg.js"></script>
+    <script src="jquery/index.js"></script>
     <title>Următorul tău angajat</title>
 
 
