--- a/your_developer.html
+++ b/your_developer.html
@@ -26,14 +26,15 @@
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
     <script src="jquery/jquery-3.6.0.js"></script>
-    <script src="jquery/index.js"></script>
+    <script defer src="jquery/index.js"></script>
     <script src="jquery/egg.js"></script>
 
     <title>Your next hire</title>
 </head>
 
 <body>
-    
+    <div id="rgb-iframe-ring"></div>
+    <div id="cursor-glow" aria-hidden="true"></div>
     <div class="area">
         <ul class="circles">
             <li></li>
@@ -52,7 +53,7 @@
     <div class="container">
         <div class="row cent">
             <div class="padd-0 col-xl d-flex justify-content-center" id="blur">
-                <iframe src="desc.html" allowtransparency="true" class="d-flex justify-content-center" id="li1">
+                <iframe src="desc.html" allowtransparency="true" class="d-flex justify-content-center" id="li1"> </iframe>
             </div>
         </div>
     </div>
