--- a/Ihr_Webentwickler.html
+++ b/Ihr_Webentwickler.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <div id="cursor-glow" aria-hidden="true"></div>
     
     <div class="area">
         <ul class="circles">
