--- a/desc.html
+++ b/desc.html
@@ -17,6 +17,7 @@
     <script src="jquery/index.js"></script>
     <script src="https://kit.fontawesome.com/e85267642f.js" crossorigin="anonymous"></script>
     <script src="jquery\desc.js"></script>
+    <script src="jquery\iframe.js"></script>
 
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
