--- a/desc.html
+++ b/desc.html
@@ -17,7 +17,7 @@
     <script src="jquery/index.js"></script>
     <script src="https://kit.fontawesome.com/e85267642f.js" crossorigin="anonymous"></script>
     <script src="jquery\desc.js"></script>
-    <script src="jquery\iframe.js"></script>
+
 
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
@@ -104,7 +104,7 @@
                     Unofficial team <a target="_blank" href="https://magnifywellness.org/Tech_team.html">therapist</a> /
                      <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">teacher</a> / 
                      <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">volunteer</a>: I study psychology as a hobby, 
-                     good at explaining stuff, and will do <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> 
+                     good at <a href="https://drive.google.com/file/d/1yTVe22cfkpQ2TWw2SOqK_VNahoThwqrE/view?usp=sharing">explaining</a> stuff, and will do <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> 
                      if it's for a <a target="_blank" href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">good cause</a>.
                 <!-- 
                 <i class="fab fa-microsoft"></i> <a
