--- a/desc_de.html
+++ b/desc_de.html
@@ -95,7 +95,7 @@
                 <a target="_blank" href="https://magnifywellness.org/Tech_team.html">Therapeut</a> / 
                 <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">Lehrer</a> / 
                 <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">Freiwilliger</a> 
-                des Teams: Ich studiere Psychologie als Hobby, erkläre Dinge gut und tue 
+                des Teams: Ich studiere Psychologie als Hobby, <a href="https://drive.google.com/file/d/1yTVe22cfkpQ2TWw2SOqK_VNahoThwqrE/view?usp=sharing">erkläre</a>  Dinge gut und tue 
                 <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">mehr</a>, 
                 wenn es für einen <a target="_blank" href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">guten Zweck</a> ist.
             </div>
