--- a/desc_ro.html
+++ b/desc_ro.html
@@ -89,7 +89,7 @@
                 <a target="_blank" href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">traduc</a> specificații, meme-uri și comenzi de cafea <br>
                 <i class="fa-solid fa-hand-holding-medical"></i> <a target="_blank" href="https://magnifywellness.org/Tech_team.html">psiholog</a>  /
                  <a target="_blank" href="https://drive.google.com/file/d/1Z3IdOHZfWHMM0mmRZBOwFEOFD_bk-gxP/view?usp=sharing">profesor</a> / 
-                 <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">voluntar</a> neoficial al echipei: studiez psihologia ca hobby, explic bine lucrurile și fac 
+                 <a target="_blank" href="https://drive.google.com/file/d/1G0zlnZxDPXZcHY6brqkfcCnTFDbI-tiQ/view?usp=sharing">voluntar</a> neoficial al echipei: studiez psihologia ca hobby, <a href="https://drive.google.com/file/d/1yTVe22cfkpQ2TWw2SOqK_VNahoThwqrE/view?usp=sharing">explic</a> bine lucrurile și fac 
                  <a target="_blank" href="https://drive.google.com/file/d/18m0bPzo_TOrYNOQUt8tfCmKt3dgNtRco/view?usp=sharing">extra</a> dacă e pentru o 
                  <a target="_blank" href="https://drive.google.com/file/d/1ADLfCqb1x-_JbbaVgGo8LFQI1Tw5uQnT/view?usp=sharing">cauză bună</a>.
             </div>
