--- a/index.html
+++ b/index.html
@@ -49,16 +49,8 @@
         <div class="row cent">
             <div class="col-xl padd-0 d-flex justify-content-center" id="blur">
                 <div class="center">
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
+
+                    <div id="andrei">❤️</div>
                   </div>
                 <!-- <img src="assets/img/loading.gif" alt="loading" id="load"> -->
             </div>
@@ -71,7 +63,7 @@
 <script>
         setTimeout(function(){
             window.location.href = "/your_developer.html";
-        }, 800)
+        }, 1500)
     </script>
 
 
