--- a/desc.html
+++ b/desc.html
@@ -107,7 +107,7 @@
                 ,
                 <a target="_blank"
                     href="https://drive.google.com/file/d/1h4FtzaktWZ5Wu2YyTlQ3oxVyYywBlgCD/view?usp=sharing">German</a>
-                & Romanian dev squads: <a
+                & Romanian dev squads: <a target="_blank"
                     href="https://drive.google.com/file/d/1C_0xRM6E68JbZfUc9k1N3Qc02NguYkSv/view?usp=sharing">translating</a>
                 specs, memes, and coffee orders <br>
                 <i class="fa-solid fa-hand-holding-medical"></i>
