--- a/desc.html
+++ b/desc.html
@@ -84,7 +84,7 @@
                 <i class="fa-solid fa-microchip"></i> Computer Engineering student @
                 <a target="_blank" href="https://ac.upt.ro/">ac.upt.ro</a> <br>
                 <i class="fa-brands fa-java"> </i>
-                Java OOP enjoyer & web design conniseur:
+                Java OOP enjoyer &  <a href="github-pages-list.html">web design</a> conniseur:
                 will implement a
                 <a target="_blank" href="https://github.com/Pcarioca/Markov-Language-Model">Markov Chain</a>
                 in Java and <a target="_blank"
