--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -48,7 +48,8 @@
             <li></li>
         </ul>
     </div>
-    <p id="langg"> <a class="pasive" href="your_developer.html">EN</a> | <a href="your_developer.html" class="active">RO</a> | <a href="Ihr_Webentwickler.html" class="pasive">DE</a>
+    <p id="langg"> <a class="pasive" href="your_developer.html">EN</a> | <a href="your_developer.html"
+            class="active">RO</a> | <a href="Ihr_Webentwickler.html" class="pasive">DE</a>
     </p>
 
     <div class="container">
